Kubernetes/springboot-microservice-advanced/cloud-admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-admin
  namespace: mddz
spec:
  selector:
    matchLabels:
      app: cloud-admin
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: cloud-admin
    spec:
      volumes:
        - name: cloud-admin-logs
          persistentVolumeClaim:
            claimName: cloud-admin-logs-claim
      securityContext:
        runAsUser: 10000
        runAsGroup: 10001
      imagePullSecrets:
        - name: my-reg-key
      containers:
      - name: cloud-admin
        image: registry.***.******.com/mddz/cloud-admin:1.0.0-SNAPSHOT
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 9999
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 80m
            memory: 150Mi
          limits:
            cpu: 160m
            memory: 350Mi
        volumeMounts:
          - name: cloud-admin-logs
            mountPath: /home/mddz/logs/cloud-admin/${INSTANCE} 
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-admin-service
  namespace: mddz
spec:
  type: ClusterIP
  selector:
    app: cloud-admin
  ports:
  - protocol: TCP
    port: 9999
    targetPort: 9999
