Kubernetes/springboot-microservice-advanced/report-uploader.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-uploader
  namespace: mddz
spec:
  selector:
    matchLabels:
      app: report-uploader
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: report-uploader
    spec:
      volumes:
        - name: report-uploader-logs
          persistentVolumeClaim:
            claimName: report-uploader-logs-claim
      securityContext:
        runAsUser: 10000
        runAsGroup: 10001
      imagePullSecrets:
        - name: my-reg-key
      containers:
      - name: report-uploader
        image: registry.code.***.com/mddz/report-uploader:1.0.0-SNAPSHOT
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8085
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 80m
            memory: 150Mi
          limits:
            cpu: 200m
            memory: 450Mi
        volumeMounts:
          - name: report-uploader-logs
            mountPath: /home/mynamespace/logs/report-uploader/${INSTANCE} 
---
apiVersion: v1
kind: Service
metadata:
  name: report-uploader-service
  namespace: mddz
spec:
  type: ClusterIP
  selector:
    app: report-uploader
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
